bk_ida/gccida/c3/parse_input_constraint
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_input_constraint/src/stmt.c:2043:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v17] & 0x88) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_input_constraint/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_input_constraint/src/stmt.c:2180:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v17] & 0x88) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_input_constraint/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_input_constraint/src/obj/stmt.o] Error 1
